--- a/src/css/style.css
+++ b/src/css/style.css
@@ -227,6 +227,8 @@
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
+  background: linear-gradient(135deg, gray, gray, gray, blue);
+  z-index: -2;
 }
 
 .row {
@@ -281,6 +283,11 @@ em {
   -webkit-text-stroke: 1px skyblue;
 }
 
+.forkliftPage {
+  background: linear-gradient(135deg, gray, gray, gray, blue);
+  z-index: -20;
+}
+
 .h1Title {
   text-align: center;
   margin-top: 7%;
@@ -326,5 +333,28 @@ em {
 
 .licenceForkLift {
   width: 100%;
+}
+
+.jsPage {
+  background: linear-gradient(135deg, gray, gray, gray, blue);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.aboutJS {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.h1TitleJs {
+  -webkit-text-stroke: 1px blue;
+  color: yellow;
+}
+
+.loryPage {
+  background: linear-gradient(135deg, gray, gray, gray, blue);
+  height: 90vh;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
