--- a/src/style.scss
+++ b/src/style.scss
@@ -288,7 +288,7 @@ margin-top:2%;
 //*Lorry*//{
     .loryPage{
         background:linear-gradient(135deg,gray,gray,gray,blue);
-        height:90vh;
+        height:fit-content;
         text-align:center;
 
     }
