--- a/src/style.scss
+++ b/src/style.scss
@@ -18,7 +18,9 @@ $stroke:1px white;
        
         position:absolute;
         z-index:-1;
-        background:linear-gradient(135deg,gray,gray,gray,blue)
+        background:linear-gradient(135deg,gray,gray,gray,blue);
+        top:10%;
+      
     }
     //*Navbar*//
 .nav{
@@ -73,7 +75,7 @@ $stroke:1px white;
 /*-------------------------------------------*/
 .aboutme{
 
-height:90vh;
+height:100vh;
 }
 .name{
     text-align:center;
@@ -289,7 +291,218 @@ margin-top:2%;
         text-align:center;
 
     }
-.active {
-    color:red;
+//*   NEXT NEXT NEXT NEXT NEXT NEXT NEXT NEXT NEXT NEXT NEXT MEDia      *//
+@media (min-width:499px){
+    .container{
+     max-width:100%;
+     overflow:hidden;
+        font-family: 'Josefin Sans';
+    }
+    #canvas{
+       
+        position:absolute;
+        z-index:-1;
+        background:linear-gradient(135deg,gray,gray,gray,blue);
+        top:10%;
+      
+    }
+    .nav{
+
+        height:10vh;
+        background-color: darken(orange,1%);
+        border-bottom: 5px solid black;    
+        border-top: 5px solid black;    
+       
+      
+    }
+    .ulNavbar{
+        display:flex;
+        justify-content: space-evenly;
+        width:100%;
+        height:100%;
+        text-decoration: none;
+        align-items: center;
+        list-style-type:none;
+    }
+    .ulNavbar a{
+        font-size:1.5rem;
+        text-decoration: none;
+        font-weight:bold;
+        -webkit-text-stroke:1px darkblue;
+        color:yellow;
+        height:100%;
+        width:100%;
+      
+    }
+    .me{
+        
+        height:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
     
+    }
+    .contact{
+        justify-content: center;
+        height:100%;
+        display:flex;
+        align-items: center;
+    }
+    .cred{
+        height:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    /*-------------------------------------------*/
+    .aboutme{
+
+        height:100vh;
+        }
+        .name{
+            text-align:center;
+            -webkit-text-stroke:$stroke;
+            font-weight:bold;
+        }
+        .firstp{
+            text-align:center;
+            font-size:1.5rem;
+            color:darkgreen;
+        }
+        .pp{
+            font-size:1.5rem;
+            text-align: center;
+            color:orange
+        }
+        
+        .circle{
+            width:60%;
+           position:relative;
+         left:25%;
+            transform:translate(-50%,0%);
+          
+          
+         
+           animation:runCircle 20s infinite linear;
+        }
+        @keyframes runCircle{
+            0%{
+                transform:rotate(360deg)
+            }
+            100%{
+                transform:rotate(0deg)
+            }
+        }
+        .emClass{
+            color:darkblue;
+            text-align:center;
+            height:10%;
+            -webkit-text-stroke:1px yellow;
+        }
+        .klik{
+            position:relative;
+            left:50%;
+            transform:translate(-50%,0%);
+            font-size:1.5rem;
+            -webkit-text-stroke:$stroke;
+        }
+        //*CONTACT*//
+.contact1{
+    overflow:hidden;
+    background: linear-gradient(45deg,gra,blue);
+    }
+    .h1contact{
+        -webkit-text-stroke:1px darkred;
+        text-align:center;
+    }
+    .fon{
+        text-align:center;
+    }
+    .byfon{
+        font-size:2.5rem;
+        color:red;
+        -webkit-text-stroke:1px darkblue;
+    }
+    .telefon{
+      position:relative;
+      left:50%;
+      transform:translate(-50%,0%); 
+        width:40%;
+    }
+    .h1email
+    {
+        -webkit-text-stroke:1px darkred;
+        text-align:center;
+    }
+    
+    
+    #email{
+        background-color: skyblue;
+        position:relative;
+        left:50%;
+        transform:translate(-50%,0%);
+    }
+    .textarea{
+        width:80%;
+        height:270px;
+        background:skyblue;
+        position:relative;
+        left:50%;
+        transform:translate(-50%,0%);
+    
+    }
+    .send{
+        position:relative;
+        left:50%;
+        top:1%;
+        width:95%;
+      height:50px;
+        background: linear-gradient(to right,gray,darkblue);
+        color:white;
+        font-size:1.5rem;
+        transform:translate(-50%,0%)
+    
+    
+    }
+    .label{
+        position: relative;
+        left:30%;
+        color:darkred;
+        
+    }
+    //*CREDENTIALS*/
+.kwalifikacje{
+    min-height:fit-content;
+    background:linear-gradient(135deg,gray,gray,gray,blue);
+    z-index:-2;
 }
+//*JS_PAGE*/
+//*JS PAGE *//
+.jsPage{
+    // background:linear-gradient(135deg,gray,gray,gray,blue);
+    height:fit-content;
+}
+.aboutJS{
+   
+    font-size:1.7rem;
+    text-align:center;
+}
+.h1TitleJs{
+  
+    -webkit-text-stroke:1px blue;
+    color:yellow;
+}
+.jsbtn{
+    position:relative;
+  
+}
+//*Lorry*//
+.loryPage{
+    background:linear-gradient(135deg,gray,gray,gray,blue);
+    height:fit-content;
+    text-align:center;
+    font-size:1.6rem;
+
+}
+    }
